--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea/
+/.idea/
 /shelf/
 /workspace.xml
+/vcs.xml
+/modules.xml
+misc.xml
 
+image_proseccing.iml
+image-processing.iml
 ### Eclipse ###
 .apt_generated
 .classpath
